# ktask

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/ktask/: fwd.hpp  queue.hpp  queue_create_info.hpp  queue_fwd.hpp  task.hpp  task_fwd.hpp  task_id.hpp  task_status.hpp
lib/src/: build_version.hpp.in  ktask.cpp
tests/: CMakeLists.txt  test_queue.cpp
